--- a/CPS410Final/style.css
+++ b/CPS410Final/style.css
@@ -13,7 +13,7 @@
 .form {
     position: relative;
     z-index: 1;
-    background: rgba(7, 40, 195, 0.8);
+    background: black;
     max-width: 360px;
     margin: 0 auto 100px;
     padding: 45px;
