--- a/CPS410Final/style.css
+++ b/CPS410Final/style.css
@@ -13,7 +13,7 @@
 .form {
     position: relative;
     z-index: 1;
-    background: black;
+    background-color: black;
     max-width: 360px;
     margin: 0 auto 100px;
     padding: 45px;
@@ -61,4 +61,5 @@
         }
 
     .form .register-form {
+        background-color: black;
     }
