--- a/CPS410Final/tutor.css
+++ b/CPS410Final/tutor.css
@@ -13,6 +13,7 @@
     align-content: center;
     position: center;
     margin: 0 auto;
+    padding: 15px;
 }
 
 .dropdown {
@@ -41,27 +42,6 @@
     background-color: deepskyblue;
 }
 
-.dropdown-content{
-    display: none;
-    margin-right: 20%;
-    margin-left: 20%;
-    position: absolute;
-    background-color: gray;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a{
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-}
-
-.dropdown-content a:hover{
-    background-color: #f1f1f1;
-}
 
 .dropdown:hover .dropdown-content {
     display: block;
@@ -75,7 +55,7 @@
     position: relative;
     margin-left: 15%;
     margin-right: 15%;
-    margin-top: 45px;
+    margin-top: 15%;
     text-align: center;
     
 }
@@ -114,7 +94,21 @@ label {
     margin-top: 10%;
     width: 80%;
 }
-nav ul li {
-    position: relative;
+.form button:hover, .form button:active {
+    background: #43A047;
+}
+
+.form button {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0px;
+    background: deepskyblue;
+    width: 100%;
+    border: 0px;
+    padding: 15px;
+    color: white;
+    font-size: 14px;
+    cursor: pointer;
+    margin-top: 30px;
 }
 
