nav bar update and login/out

--- a/CPS410Final/Site.Master
+++ b/CPS410Final/Site.Master
@@ -48,6 +48,16 @@
             
         }
 
+        .button{
+            width: 20%;
+            background-color:black;
+            color: white;
+            padding: 0,0,0px;
+            height: 35px;
+            float: left;
+            border-width: 0px;
+        }
+
 
         
     </style>
@@ -60,20 +70,12 @@
            </p>
 
         <div class="nav">
-            <a href="Home.aspx">
-                <asp:Label ID="lblHome" runat="server" Text="Home"></asp:Label></a>
 
-            <a href="Account.aspx">
-                <asp:Label ID="lblAccount" runat="server" Text="Account"></asp:Label></a>
-
-             <a href="Subject.aspx">
-                 <asp:Label ID="lblDiscussionBoard" runat="server" Text="Discussion Board"></asp:Label></a>
-
-            <a href="Tutor.aspx">
-                <asp:Label ID="lblFindTutor" runat="server" Text="Find Tutor"></asp:Label></a>
-
-            <a onclick="btnClick" href="Login.aspx" >
-                <asp:Label ID="lblLogin" runat="server" Text="Login / Register"></asp:Label></a>
+            <asp:Button ID="Home" runat="server" Text="Home" CssClass="button" OnClick="Home_Click" />
+            <asp:Button ID="account" runat="server" Text="Account" CssClass="button" OnClick="account_Click" />
+            <asp:Button ID="DiscussionBoard" runat="server" Text="Discussion Board"  CssClass="button" OnClick="DiscussionBoard_Click"/>
+            <asp:Button ID="FindTutor" runat="server" Text="Find Tutor"  CssClass="button" OnClick="FindTutor_Click"/>
+            <asp:Button ID="Login" runat="server" Text="Login / Register"  CssClass="button" OnClick="Login_Click"/>
         </div>
 
  
