Connection to database file.

--- a/CPS410Final/Site.Master
+++ b/CPS410Final/Site.Master
@@ -66,7 +66,7 @@
             <a href="Account.aspx">
                 <asp:Label ID="lblAccount" runat="server" Text="Account"></asp:Label></a>
 
-             <a href="DBSubject.aspx">
+             <a href="Subject.aspx">
                  <asp:Label ID="lblDiscussionBoard" runat="server" Text="Discussion Board"></asp:Label></a>
 
             <a href="Tutor.aspx">
