--- a/CPS410Final/tutor.css
+++ b/CPS410Final/tutor.css
@@ -98,6 +98,20 @@ label {
     background: #43A047;
 }
 
+#Button1 {
+    font-family: "Roboto", sans-serif;
+    text-transform: uppercase;
+    outline: 0px;
+    background: deepskyblue !important;
+    width: 100% !important;
+    border: 0px;
+    padding: 15px;
+    color: white !important;
+    font-size: 14px;
+    cursor: pointer;
+    margin-top: 30px;
+}
+
 .fTutor {
     font-family: "Roboto", sans-serif;
     text-transform: uppercase;
