--- a/CPS410Final/style.css
+++ b/CPS410Final/style.css
@@ -14,6 +14,12 @@
     padding: 10% 0 0;
     margin: auto;
 }
+.radioBs{
+    
+}
+.radioBs label{
+    color: white;
+}
 
 .form {
     position: relative;
