before the rewrite

--- a/CPS410Final/fourmCss.css
+++ b/CPS410Final/fourmCss.css
@@ -22,7 +22,17 @@
     margin-bottom: 20px;
 }
 
-.label{
+.sublabel {
+    text-align: center;
+    width: 50%;
+    margin-left: 25%;
+    margin-right: 25%;
+    vertical-align:middle;
+}
+.toplabel{
+    width:10%;
+    margin-bottom:45%;
+    margin-right:45%;
     text-align:center;
 }
 
