--- a/CPS410Final/fourmCss.css
+++ b/CPS410Final/fourmCss.css
@@ -39,3 +39,11 @@
 .topicContainer{
     
 }
+
+.invBtn{
+    background-color: transparent;
+    border: none;
+    width: 100%;
+    height: 100%;
+
+}
