--- a/CPS410Final/fourmCss.css
+++ b/CPS410Final/fourmCss.css
@@ -3,6 +3,13 @@
     width: 100%;
 }
 
+.allMyBtn {
+    border-radius: 18px;
+    width: 100%;
+    height: 35px;
+    background-color: transparent;
+}
+
 .subjectDiv{
     border-radius: 18px;
     width: 40%;
@@ -22,28 +29,4 @@
     margin-bottom: 20px;
 }
 
-.sublabel {
-    text-align: center;
-    width: 50%;
-    margin-left: 25%;
-    margin-right: 25%;
-    vertical-align:middle;
-}
-.toplabel{
-    width:10%;
-    margin-bottom:45%;
-    margin-right:45%;
-    text-align:center;
-}
 
-.topicContainer{
-    
-}
-
-.invBtn{
-    background-color: transparent;
-    border: none;
-    width: 100%;
-    height: 100%;
-
-}
