--- a/CPS410Final/tutor.css
+++ b/CPS410Final/tutor.css
@@ -155,3 +155,15 @@ label {
     
 }
 
+.resultDiv {
+    background-color: yellow;
+    color: yellow;
+}
+
+.results {
+    position: center;
+    align-content: center;
+    color: black;
+    background-color: white;
+
+}
