--- a/CPS410Final/tutor.css
+++ b/CPS410Final/tutor.css
@@ -165,5 +165,7 @@ label {
     align-content: center;
     color: black;
     background-color: white;
+    width: 50%;
+    margin-left: 25%;
 
 }
