--- a/CPS410Final/tutor.css
+++ b/CPS410Final/tutor.css
@@ -7,10 +7,16 @@
     text-align: center;
 }
 
-.empty{
+.empty {
     width: 100%;
     height: 50px;
 }
+.atutor {
+    color: yellow;
+    background-color: yellow;
+    margin-left: 25%;
+}
+
 .tutorsearch {
     background-color: black;
     width: 360px;
@@ -26,20 +32,20 @@
     text-align: center;
     overflow: visible;
 }
-.dropdown .dropbtn {
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: deepskyblue;
-    font-family: inherit;
-   
-    margin-top: 10%;
-    text-align: center;
-}
 
-.dropbtn{
+    .dropdown .dropbtn {
+        font-size: 16px;
+        border: none;
+        outline: none;
+        color: white;
+        padding: 14px 16px;
+        background-color: deepskyblue;
+        font-family: inherit;
+        margin-top: 10%;
+        text-align: center;
+    }
+
+.dropbtn {
     text-align: center;
     width: 70%;
     position: center;
@@ -53,7 +59,7 @@
     display: block;
 }
 
-.dropdown:hover .dropbtn{
+.dropdown:hover .dropbtn {
     background-color: deepskyblue;
 }
 
@@ -63,8 +69,8 @@
     margin-right: 15%;
     margin-top: 15%;
     text-align: center;
-    
 }
+
 .form {
     position: relative;
     z-index: 1;
@@ -74,6 +80,7 @@
     padding: 45px;
     text-align: center;
 }
+
     .form input {
         font-family: "Times New Roman", sans-serif;
         position: center;
@@ -100,6 +107,7 @@ label {
     margin-top: 10%;
     width: 80%;
 }
+
 .fTutor:hover, .fTutor:active {
     background: #43A047;
 }
@@ -139,7 +147,7 @@ label {
     margin-right: 15%;
     margin-top: 5%;
     width: 70%;
-    color:white;
+    color: white;
 }
 
 .btnBack {
@@ -151,8 +159,8 @@ label {
     border-color: silver;
     margin: auto;
 }
-.tutorlbl{
-    
+
+.tutorlbl {
 }
 
 .resultDiv {
@@ -161,11 +169,9 @@ label {
 }
 
 .results {
-    position: center;
     align-content: center;
     color: black;
     background-color: white;
-    width: 50%;
     margin-left: 25%;
-
+    margin-right: 25%;
 }
