--- a/CPS410Final/tutor.css
+++ b/CPS410Final/tutor.css
@@ -12,9 +12,10 @@
     height: 50px;
 }
 .atutor {
-    color: yellow;
-    background-color: yellow;
-    margin-left: 25%;
+    color: black;
+    background-color: white;
+    border-bottom: solid;
+    margin-bottom: 10px;
 }
 
 .tutorsearch {
@@ -171,7 +172,7 @@ label {
 .results {
     align-content: center;
     color: black;
-    background-color: white;
-    margin-left: 25%;
-    margin-right: 25%;
+    background-color: gray;
+    margin-left: 15%;
+    margin-right: 15%;
 }
