--- a/CPS410Final/fourmCss.css
+++ b/CPS410Final/fourmCss.css
@@ -8,6 +8,15 @@
     width: 100%;
     height: 35px;
     background-color: transparent;
+    color: black;
+}
+
+.topicBTN {
+    border-radius: 18px;
+    width: 100%;
+    height: 35px;
+    background-color: transparent;
+    color: deepskyblue;
 }
 
 .subjectDiv{
@@ -28,7 +37,8 @@
     width: 36%;
     margin: auto;
     height: 35px;
-    background-color: blueviolet;
+    background-color: black;
+    color: deepskyblue;
     margin-bottom: 20px;
 }
 
